# Density-functional-theory-based-on-Python

./: .gitignore  INPUT.json  README.md  Ref.json  dft_support.py  hamiltonian.py  pyproject.toml  smoke_test.py  solve.py  task_script.py  wavefunction.py
src/realspace_dft/: __init__.py  __main__.py
src/realspace_dft/config/: __init__.py  constants.py  exceptions.py  input_parser.py
src/realspace_dft/core/: __init__.py  models.py
src/realspace_dft/mesh/: __init__.py  density.py  differential.py  geometry.py
src/realspace_dft/physics/: __init__.py  density.py  energy.py  ewald.py  hamiltonian.py  nonlocal_operator.py  pseudopotential.py  xc.py
src/realspace_dft/reporting/: __init__.py  persistence.py  tensorboard.py
src/realspace_dft/solvers/: __init__.py  eigen.py  mixing.py
src/realspace_dft/workflows/: __init__.py  bootstrap.py  pipeline.py  scf.py
tests/: test_bootstrap.py  test_eigensolver.py  test_energy.py  test_hamiltonian.py  test_scf.py
