[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "realspace-dft"
version = "0.1.0"
description = "基于 Python 的实空间 DFT 教学型实现"
readme = "README.md"
requires-python = ">=3.10"
dependencies = [
  "numpy>=1.24",
  "scipy>=1.11",
  "tensorboardX>=2.6"
]

[tool.setuptools.packages.find]
where = ["src"]
